<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.viewModels.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.signup.SignUpFragment"
        android:background="@drawable/signin_background"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/textViewSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/full_name_label"
            android:textColor="#546E7A"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameInputTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_full_name_placeholder"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C"
                tools:ignore="TouchTargetSizeCheck"
                android:text="@={viewModel.fullName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail_label"
            android:textColor="#546E7A"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameInputTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_e_mail_place_holder"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C"
                tools:ignore="TouchTargetSizeCheck"
                android:text="@={viewModel.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password_label"
            android:textColor="#546E7A"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
                android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/signin_btn_background"
            android:backgroundTint="#FE724C"
            android:paddingHorizontal="70dp"
            android:text="@string/sign_up_upper_label"
            android:textColor="#311B92"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp">

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>