<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.viewModels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:paddingHorizontal="15dp"
        tools:context=".screens.profile.ProfileFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewPhone"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:padding="6dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            app:srcCompat="@drawable/mask_group"
            app:strokeColor="@color/black"
            app:strokeWidth="10dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="4dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPhone"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPhone"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageViewPhone"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            app:strokeColor="@color/white"
            app:strokeWidth="6dp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.currentUserData[&quot;fullName&quot;]}"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPhone" />

        <TextView
            android:id="@+id/textViewFullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/full_name_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/signin_btn_background"
            android:backgroundTint="#ECE5E5"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFullNameLabel"
            android:text="@{viewModel.currentUserData[&quot;fullName&quot;]}"/>

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFullName" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/signin_btn_background"
            android:backgroundTint="#ECE5E5"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailLabel"
            android:text="@{viewModel.currentUserData[&quot;email&quot;]}"/>

        <TextView
            android:id="@+id/textViewPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/signin_btn_background"
            android:backgroundTint="#ECE5E5"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhoneLabel"
            android:text="@{viewModel.currentUserData[&quot;phoneNumber&quot;]}"/>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="157dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/splash_screen"
            android:background="@drawable/signin_btn_background"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:onClick="@{() -> viewModel.onLogOut()}"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>